@@ -1,10 +1,12 @@
 Current Version: @@VERSION@@
 
-ctags-5.3.2 (Thu Sep 26 2002)
+ctags-5.3.2 (Sat Sep 28 2002)
 * Improved ability for tagsOpen() in readtags library to report failure to
   open tag file, adding new fields to tagFileInfo structure.
 * Added '$' a valid character for C identifier [VMS].
+* Added class and method support to TCL parser [TCL].
 * Fixed problem terminating Perl POD block [Perl, Bug #612019].
+* Fixed problem with leading spaces before instruction [TCL, Bug #615928].
 
 ctags-5.3.1 (Thu Sep 12 2002)
 * Renamed tagsSetSorted() to tagsSetSortType() and "sorted" member of
